--- a/src/stubs/Homestead.yaml
+++ b/src/stubs/Homestead.yaml
@@ -1,5 +1,5 @@
 ---
-ip: "192.168.10.10"
+ip: "192.168.33.10"
 memory: 2048
 cpus: 1
 
@@ -9,12 +9,14 @@ keys:
     - ~/.ssh/id_rsa
 
 folders:
-    - map: ~/Code
-      to: /home/vagrant/Code
+    - map: ~/Projects
+      to: /home/vagrant/Projects
 
 sites:
-    - map: homestead.app
-      to: /home/vagrant/Code/Laravel/public
+    - map: my.smart.lan
+      to: /home/vagrant/Projects/smart/www
+    - map: auth-new.smart.lan
+      to: /home/vagrant/Projects/auth-smart-new/public
 
 databases:
     - homestead
